app-test/testdata/typesystem/pos/type-definition-tuple-type/src/typedef.cal
namespace typedef:
    actor TupleType() ==> int OUT:
        (int, bool) t;
        do
            OUT <-- t#1;
        end
    end
end