app-test/testdata/typesystem/neg/tuple-type-element-access/src/tuple.cal
namespace tuple:
    actor ElementAccess() ==> int OUT:
        (int, bool) a;
        do
            OUT <-- a#0;
            OUT <-- a#3;
        end
    end
end